Issue number:  3015 Obtained from: Submitted by:  dennis Reviewed by:   kevin Configurator screen is displayed ugly on IE7 in non English locale
git-svn-id: https://svn.java.net/svn/opensso~svn/trunk@4089 b2119f5d-607e-cfcf-c5d3-9fa3ed8061d4

--- a/products/amserver/war/config/assets/css/Specific/wizard.css
+++ b/products/amserver/war/config/assets/css/Specific/wizard.css
@@ -58,7 +58,7 @@
 }
 
 .tabContent {
-	height: 440px;
+	height: 480px;
 	border-left:1px solid #999999;
 	margin-left:170px;		
 }
